Agregue una imagen, y agregue un parrafo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <header class="header">
       <h1 class="header__title">Esto es una pagina de prueba</h1>
       <p class="header__paragraph">Una pagina web es un archivo en tu PC</p>
+      <img src="./images/tCyz1.png" alt="Esto es una imagen" />
+      <p>Esta imagen aparece cuando no has instalado GITHUB en tu compu</p>
     </header>
   </body>
 </html>
