--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         alt="Esto es una imagen"
       />
       <p>Esta imagen aparece cuando no has instalado GITHUB en tu compu</p>
+      <p>Aqui le agrego mi parte</p>
     </header>
   </body>
 </html>
